# lab-nbody

./: CMakeLists.txt  README.md  nbody.nvvp  profile.sh
src/: CMakeLists.txt  cuda_helper.cuh  nbody.cu
